welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: reassignment to val
		x= x+1
                 ^