welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(x:Int, y:Boolean) {
	if (y== true) {
		x= x+1
	}
}
